# crs-process-api

./: .gitignore  .gitmodules  Caddyfile  deno.json  index.html  index.js  jest.config.js  package.json  readme.md  rollup.config.js
app/: data-factory.js  (+7 more)
wasm/data/: Cargo.toml
wasm/data/crates/macros/: Cargo.toml
wasm/data/crates/macros/src/: lib.rs
wasm/data/crates/traits/: Cargo.toml
wasm/data/crates/traits/src/: lib.rs
wasm/data/macros/: Cargo.toml
wasm/data/macros/src/: lib.rs
wasm/data/src/: aggregates.rs  date_time.rs  duration.rs  enums.rs  evaluators.rs  lib.rs  macros.rs  processors.rs  traits.rs  utils.rs
wasm/data/src/aggregates/: ave.rs  count.rs  dates.rs  durations.rs  max.rs  min.rs  sum.rs
wasm/data/src/aggregates/date_time/: max.rs  min.rs
wasm/data/src/aggregates/dates/: max.rs  min.rs
wasm/data/src/aggregates/durations/: ave.rs  max.rs  min.rs  sum.rs
wasm/data/src/evaluators/: between.rs  ends_with.rs  equal.rs  greater_or_equal.rs  greater_than.rs  is_not_null.rs  is_null.rs  less_or_equal.rs  less_than.rs  like.rs  not_equal.rs  not_like.rs  object_evaluator.rs  one_of.rs  starts_with.rs
wasm/data/src/filter/: filter.rs
wasm/data/src/processors/: aggregate.rs  filter.rs  group.rs  perspective.rs  sort.rs  summary.rs  unique.rs
wasm/data/src/utils/: expressions.rs
wasm/excel/: Cargo.toml  readme.md
wasm/excel/src/: data.rs  formatters.rs  lib.rs
wasm/excel/src/formatters/: duration_formatter.rs  number_formatter.rs
wasm/markdown/: Cargo.toml  readme.md
wasm/markdown/src/: lib.rs
wasm/system/: Cargo.toml
wasm/system/src/: lib.rs
(+671 files in other folders)
