[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
serde_json = "1.0.70"
iso8601-duration = "0.1.0"
wasm-bindgen = "0.2.78"
chrono = "0.4.19"

console_error_panic_hook = "0.1.7"
#
#[dependencies.web-sys]
#version = "0.3.55"
#features = [
#    "console"
#]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true