[package]
name = "exports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.60"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true