[package]
name = "markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.78"
pulldown-cmark = { version = "0.9.2", default-features = false }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true