[package]
name = "system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
wasm-bindgen = "0.2.78"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true